--- a/part3/index.html
+++ b/part3/index.html
@@ -14,6 +14,7 @@
     <script src="PlayerMissile.js"></script>
     <script src="EnemyMissile.js"></script>
     <script src="EnemyLauncher.js"></script>
+    <script src="City.js"></script>
     <script src="Silo.js"></script>
     <script src="sketch.js"></script>
   </body>
